--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href ="https://i.redd.it/6nqh27dio1rb1.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -18,6 +16,10 @@
 
 <div class="row gx-5 justify-content-center">
 
+
+
+
+
 <div class="col" style="padding-left: 148px; max-width: 882px">
 
     <section class="row">
@@ -27,99 +29,117 @@
         </div></div>
 
 </section>
-    <div class="row">
+    <div class="row" >
         <div class="col">
-        <div class="Exp bg ">
-            <h2 class=" Artic text-black">ABOUT ME_</h2>
-            <div class="Text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.
+        <div class=" bg ">
+            <div style="padding-top:112px;padding-left: 90px; padding-right: 45px;"><h2 class=" Artic text-black">ABOUT ME_</h2>
+                <div class="Text">
+                    Lorem ipsum dolor a consectetur adipiscing elitse eiusmod tempor incididunt labore dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus facilisis. Lorem ipsum dolor amet, consectetur adipiscing elitsed eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+
+                </div>
             </div>
+
         </div>
         </div>
     </div>
+
+
     <div class="row">
         <div class="col">
-        <div class=" Exp bg text-black Hobby " id="last-block" >
+        <div class="  bg " id="last-block" >
+            <div style="padding-top:103px;padding-left: 90px; padding-right: 45px;">
+
             <h2 class="Artic ">HOBBIES_</h2>
-            <div class="row pt-4 text-center Data">
-                <div class="col">
-                    <i class="fa-solid fa-route Icons"></i>
-                    <p>Travel</p>
+                <div class="row text-center Hobbies" style="padding-top: 40px;padding-bottom: 120px">
+                    <div class="col">
+                        <img src="images/Icons/travel.svg" alt="Travel Icon" class="Icons">
+                        <p>Travel</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/Icons/audio.svg" alt="Music Icon" class="Icons">
+                        <p>Music</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/Icons/document.svg" alt="Writing Icon" class="Icons">
+                        <p>Writing</p>
+                    </div>
+                    <div class="col">
+                        <img src="images/Icons/chess.svg" alt="Chess Icon" class="Icons">
+                        <p>Chess</p>
+                    </div>
                 </div>
-                <div class="col">
-                    <i class="fa-solid fa-music Icons"></i>
-                    <p>Music</p>
-                </div>
-                <div class="col">
-                    <i class="fa-solid fa-pen-nib Icons"></i>
-                    <p>Writing</p>
-                </div>
-                <div class="col">
-                    <i class="fa-solid fa-chess Icons"></i>
-                    <p>Chess</p>
-                </div>
+
+
+
             </div>
         </div>
         </div>
     </div>
 </div>
 
-    <div class="col" style="padding-right: 148px" >
+
+
+
+
+
+
+
+    <div class="col" style="padding-right: 110px" >
 
         <div class="row " style="padding-top:200px;padding-left: 58px ">
-           <header class="col text-black ">
+           <header class="col ">
                <h1><span class="HeadFont1">JHON</span> <br> <span class="HeadFont2">ABIRAR</span></h1>
                <hr class="yellow-line">
-               <span class="Data Header3">UI DESIGNER</span>
+               <span class="Header3">UI DESIGNER</span>
            </header>
         </div>
 
 
 
+        <div class="row" style="padding-top:180px;padding-left: 58px">
+               <h2 class="Artic ">CONTACT INFO_</h2>
 
+               <div class="row" style="padding-top:35px;">
+                   <div class="col">
+                       <span class="Data">PHONE</span>
+                       <div class="Data2">+000 132 456 789</div>
 
-        <div class="row ">
-           <article class="col pb-sm-2 ">
-               <h2 class="Artic text-black">CONTACT INFO_</h2>
-
-               <div class="row gx-5 pt-3 Data">
-                   <div class="col-md-4 col-sm-3">
-
-                       <span class="text-black"><strong>PHONE</strong></span>
-                       <div class="pt-1">+000 132 456 789</div>
 
                    </div>
                    <div class="col">
 
-                       <span class="text-black"><strong>EMAIL</strong></span>
-                       <div class="pt-1 ">uname<wbr>@gmail.com</div>
+                       <span class="Data">EMAIL</span>
+                       <div class=" Data2">urname<wbr>@gmail.com</div>
 
                    </div>
                    <div class="col">
 
-                       <span class="text-black"><strong>AREA</strong></span>
-                       <div class="pt-1">Your Street Address Here</div>
+                       <span class="Data">AREA</span>
+                       <div class="Data2">Your Street Address Here</div>
 
                    </div>
                </div>
-           </article>
-        </div>
+           </div>
 
-        <div class="row ">
-           <article class="col pb-sm-2 ">
-               <h2 class="Artic text-black">EDUCATION_</h2>
-               <div class="row gx-5 pt-3">
+
+        <div class="row " style="padding-top:135px;padding-left: 58px">
+           <article class="col  ">
+               <h2 class="Artic ">EDUCATION_</h2>
+
+               <div class="row " style="padding-top:30px;">
+
                    <div class="col Data text-dark-gray">
-                       <span ><strong>ENTER YOUR MAJOR</strong></span><br>
-                       <div class="pt-2">
+                       <span >ENTER YOUR MAJOR</span>
+                       <div class="Data3" style="padding-top:28px;">
                            <span >Name Of Your University</span> <br>
                            <span >2005–2009</span>
                        </div>
 
                    </div>
+
                    <div class="col Data text-dark-gray">
-                       <span ><strong>ENTER YOUR MAJOR</strong></span><br>
-                       <div class="pt-2">
+                       <span >ENTER YOUR MAJOR</span>
+                       <div class="Data3" style="padding-top:28px;">
                           <span >Name Of Your University</span><br>
                            <span >2009–2011</span>
                        </div>
@@ -130,98 +150,92 @@
            </article>
         </div>
 
-        <article class="col">
-            <h2 class="Exp Artic text-black">EXPERIENCE_</h2>
+        <article class="row" style="padding-top:126px;padding-left: 58px;">
+            <h2 class="Artic ">EXPERIENCE_</h2>
 
-            <div class="job-item col">
+            <div class="row Open-Sans text-light-gray">
                 <div >
-                    <h4 class="text-dark-gray">Enter Job Position Here</h4>
-                    <div class="Text"><span class="Bowl">Present</span>
-
-                        <span class="job-company">Company Name / Location</span></div>
+                    <h4 class=" text-bottom">Enter Job Position Here</h4>
+                 <div style="padding-top: 15px; padding-left:2px">
+                     <div  style="padding-bottom: 17px;">
+                         <span class="Bowl" >Present</span><span style="padding-left: 24px">Company Name / Location</span>
+                     </div>
+                 </div>
 
                 </div>
-                <p class="Text text-light-gray">
-                    Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
-                </p>
+                <div >
+                    Lorem ipsum dolor sit amet, this is a thena &nbsp;consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                </div>
             </div>
-            <div class="job-item">
-                <div class="job-header">
-                    <h4 class="text-dark-gray">Enter Job Position Here</h4>
-                    <div class="Text"><span class="Bowl">2017–2019</span>
-                        <span>Company Name / Location</span></div>
+            <div class="row Open-Sans text-light-gray">
+                <div >
+                    <h4 class="text-bottom2">Enter Job Position Here</h4>
+                    <div style="padding-top: 15px; padding-left:2px">
 
+                        <div style="padding-bottom: 17px;" >
+                            <span class="Bowl">2017–2019</span><span style="padding-left: 24px">Company Name / Location</span>
+                        </div>
+                    </div>
                 </div>
-                <p class="Text text-light-gray">
-                    Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
-                </p>
+                <div >
+                    Lorem ipsum dolor sit amet, this is a thena &nbsp;consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                </div>
             </div>
 
         </article>
-        <article class="col ">
-            <h2 class="Exp Artic text-black">EXPERTISE_</h2>
-            <div class="row gx-5 gy-4 ">
+
+
+        <article class="row " style="padding-top:145px;padding-left: 58px;">
+            <h2 class=" Artic ">EXPERTISE_</h2>
+            <div class="row  " style="padding-top: 40px">
                 <div class="col">
 
-                    <svg  width="140" height="140"
-                          xmlns="http://www.w3.org/2000/svg">
-
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle second-circle animated-circle rotate-variant-02 " cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle first-circle animated-circle rotate-variant-01" cx="50%" cy="50%" r="60" />
-                        <text x="50%" y="45%" text-anchor="middle" class="Data">
-                            <tspan x="50%" dy="0%" >Adobe</tspan>
-                            <tspan x="50%" dy="10%" >Photoshop</tspan>
+                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
+                        <circle class="circle second-circle animated-circle rotate-variant-02" cx="50%" cy="50%" r="75" />
+                        <circle class="circle first-circle animated-circle rotate-variant-01" cx="50%" cy="50%" r="75" />
+                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                            <tspan x="50%" dy="0%">Adobe</tspan>
+                            <tspan x="50%" dy="12%">Photoshop</tspan>
                         </text>
                     </svg>
 
                 </div>
                 <div class="col ">
 
-                    <svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
-
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle second-circle animated-circle rotate-variant-12 " cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle first-circle animated-circle rotate-variant-11" cx="50%" cy="50%" r="60" />
-                        <text x="50%" y="45%" text-anchor="middle" class="Data">
-                            <tspan x="50%" dy="0%" >Adobe</tspan>
-                            <tspan x="50%" dy="10%" >Illustrator</tspan>
+                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
+                        <circle class="circle second-circle animated-circle rotate-variant-12" cx="50%" cy="50%" r="75" />
+                        <circle class="circle first-circle animated-circle rotate-variant-11" cx="50%" cy="50%" r="75" />
+                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                            <tspan x="50%" dy="0%">Adobe</tspan>
+                            <tspan x="50%" dy="12%">Illustrator</tspan>
                         </text>
                     </svg>
 
                 </div>
                 <div class="col">
 
-                    <svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
-
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle second-circle animated-circle rotate-variant-22 " cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle first-circle animated-circle rotate-variant-21" cx="50%" cy="50%" r="60" />
-                        <text x="50%" y="45%" text-anchor="middle" class="Data">
-                            <tspan x="50%" dy="0%" >Adobe</tspan>
-                            <tspan x="50%" dy="10%" >Indesign</tspan>
+                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
+                        <circle class="circle second-circle animated-circle rotate-variant-22" cx="50%" cy="50%" r="75" />
+                        <circle class="circle first-circle animated-circle rotate-variant-21" cx="50%" cy="50%" r="75" />
+                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                            <tspan x="50%" dy="0%">Adobe</tspan>
+                            <tspan x="50%" dy="12%">Indesign</tspan>
                         </text>
                     </svg>
 
                 </div>
                 <div class="col">
 
-                    <svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
-
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle second-circle animated-circle rotate-variant-32 " cx="50%" cy="50%" r="60" />
-
-                        <circle class="circle first-circle animated-circle rotate-variant-31" cx="50%" cy="50%" r="60" />
-                        <text x="50%" y="45%" text-anchor="middle" class="Data">
-                            <tspan x="50%" dy="0%" >Power</tspan>
-                            <tspan x="50%" dy="10%" >Point</tspan>
+                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
+                        <circle class="circle second-circle animated-circle rotate-variant-32" cx="50%" cy="50%" r="75" />
+                        <circle class="circle first-circle animated-circle rotate-variant-31" cx="50%" cy="50%" r="75" />
+                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                            <tspan x="50%" dy="0%">Power</tspan>
+                            <tspan x="50%" dy="12%">Point</tspan>
                         </text>
                     </svg>
 
@@ -231,7 +245,20 @@
             </div>
 
         </article>
+
    </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 </div>
 
