--- a/app/index.html
+++ b/app/index.html
@@ -14,13 +14,13 @@
 </head>
 <body class="container-fluid" style="padding-left: 4px">
 
-<div class="row gx-5 justify-content-center">
+<div class="row gx-5 justify-content-center d-flex">
 
 
 
 
 
-<div class="col" style="padding-left: 148px; max-width: 882px">
+<div class="col" style="padding-left: 148px; max-width: 882px ;display: flex; flex-direction: column;">
 
     <section class="row">
         <div class="col">
@@ -29,11 +29,11 @@
         </div></div>
 
 </section>
-    <div class="row" >
+    <div class="row " >
         <div class="col">
         <div class=" bg ">
             <div style="padding-top:112px;padding-left: 90px; padding-right: 45px;"><h2 class=" Artic text-black">ABOUT ME_</h2>
-                <div class="Text">
+                <div class="Text collapsible-content">
                     Lorem ipsum dolor a consectetur adipiscing elitse eiusmod tempor incididunt labore dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus facilisis. Lorem ipsum dolor amet, consectetur adipiscing elitsed eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
 
                 </div>
@@ -44,31 +44,32 @@
     </div>
 
 
-    <div class="row">
+    <div class="row  flex-grow-1">
         <div class="col">
         <div class="  bg " id="last-block" >
             <div style="padding-top:103px;padding-left: 90px; padding-right: 45px;">
 
             <h2 class="Artic ">HOBBIES_</h2>
-                <div class="row text-center Hobbies" style="padding-top: 40px;padding-bottom: 120px">
+                <div class="collapsible-content">
+                <div class="row text-center  Hobbies" style="padding-top: 40px;padding-bottom: 120px">
                     <div class="col">
                         <img src="images/Icons/travel.svg" alt="Travel Icon" class="Icons">
-                        <p>Travel</p>
+                        <p class="HobbyText">Travel</p>
                     </div>
                     <div class="col">
                         <img src="images/Icons/audio.svg" alt="Music Icon" class="Icons">
-                        <p>Music</p>
+                        <p class="HobbyText">Music</p>
                     </div>
                     <div class="col">
                         <img src="images/Icons/document.svg" alt="Writing Icon" class="Icons">
-                        <p>Writing</p>
+                        <p class="HobbyText">Writing</p>
                     </div>
                     <div class="col">
                         <img src="images/Icons/chess.svg" alt="Chess Icon" class="Icons">
-                        <p>Chess</p>
+                        <p class="HobbyText">Chess</p>
                     </div>
                 </div>
-
+            </div>
 
 
             </div>
@@ -84,9 +85,9 @@
 
 
 
-    <div class="col" style="padding-right: 110px" >
+    <div class="col " style="display: flex; flex-direction: column;" >
 
-        <div class="row " style="padding-top:200px;padding-left: 58px ">
+        <div class="row AAA" >
            <header class="col ">
                <h1><span class="HeadFont1">JHON</span> <br> <span class="HeadFont2">ABIRAR</span></h1>
                <hr class="yellow-line">
@@ -99,10 +100,10 @@
         <div class="row" style="padding-top:180px;padding-left: 58px">
                <h2 class="Artic ">CONTACT INFO_</h2>
 
-               <div class="row" style="padding-top:35px;">
+               <div class="row collapsible-content" style="padding-top:25px;">
                    <div class="col">
                        <span class="Data">PHONE</span>
-                       <div class="Data2">+000 132 456 789</div>
+                       <div class="Data2">+000 123 456 789</div>
 
 
                    </div>
@@ -126,20 +127,20 @@
            <article class="col  ">
                <h2 class="Artic ">EDUCATION_</h2>
 
-               <div class="row " style="padding-top:30px;">
+               <div class="row collapsible-content" style="padding-top:34px;">
 
                    <div class="col Data text-dark-gray">
                        <span >ENTER YOUR MAJOR</span>
-                       <div class="Data3" style="padding-top:28px;">
-                           <span >Name Of Your University</span> <br>
-                           <span >2005–2009</span>
+                       <div class="Data3" style="padding-top:22px;">
+                           <div >Name Of Your University</div>
+                           <div >2005–2009</div>
                        </div>
 
                    </div>
 
                    <div class="col Data text-dark-gray">
                        <span >ENTER YOUR MAJOR</span>
-                       <div class="Data3" style="padding-top:28px;">
+                       <div class="Data3" style="padding-top:22px;">
                           <span >Name Of Your University</span><br>
                            <span >2009–2011</span>
                        </div>
@@ -152,12 +153,12 @@
 
         <article class="row" style="padding-top:126px;padding-left: 58px;">
             <h2 class="Artic ">EXPERIENCE_</h2>
-
+<div class="collapsible-content">
             <div class="row Open-Sans text-light-gray">
                 <div >
                     <h4 class=" text-bottom">Enter Job Position Here</h4>
                  <div style="padding-top: 15px; padding-left:2px">
-                     <div  style="padding-bottom: 17px;">
+                     <div  style="padding-bottom: 15px;">
                          <span class="Bowl" >Present</span><span style="padding-left: 24px">Company Name / Location</span>
                      </div>
                  </div>
@@ -172,7 +173,7 @@
                     <h4 class="text-bottom2">Enter Job Position Here</h4>
                     <div style="padding-top: 15px; padding-left:2px">
 
-                        <div style="padding-bottom: 17px;" >
+                        <div style="padding-bottom: 15px;" >
                             <span class="Bowl">2017–2019</span><span style="padding-left: 24px">Company Name / Location</span>
                         </div>
                     </div>
@@ -181,63 +182,74 @@
                     Lorem ipsum dolor sit amet, this is a thena &nbsp;consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                 </div>
             </div>
-
+            </div>
         </article>
 
 
-        <article class="row " style="padding-top:145px;padding-left: 58px;">
+        <article class="row " style="padding-top:164px;padding-left: 58px;">
             <h2 class=" Artic ">EXPERTISE_</h2>
-            <div class="row  " style="padding-top: 40px">
+            <div class="row  collapsible-content" >
                 <div class="col">
 
-                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
-                        <circle class="circle second-circle animated-circle rotate-variant-02" cx="50%" cy="50%" r="75" />
-                        <circle class="circle first-circle animated-circle rotate-variant-01" cx="50%" cy="50%" r="75" />
-                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                            <tspan x="50%" dy="0%">Adobe</tspan>
-                            <tspan x="50%" dy="12%">Photoshop</tspan>
-                        </text>
-                    </svg>
+                    <div data-percent=50>
+                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
+                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                                <tspan x="50%" dy="0%">Adobe</tspan>
+                                <tspan x="50%" dy="12%">Photoshop</tspan>
+                            </text>
+                        </svg>
+                    </div>
+
 
                 </div>
                 <div class="col ">
 
-                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
-                        <circle class="circle second-circle animated-circle rotate-variant-12" cx="50%" cy="50%" r="75" />
-                        <circle class="circle first-circle animated-circle rotate-variant-11" cx="50%" cy="50%" r="75" />
-                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                            <tspan x="50%" dy="0%">Adobe</tspan>
-                            <tspan x="50%" dy="12%">Illustrator</tspan>
-                        </text>
-                    </svg>
+                    <div data-percent="80">
+                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
+                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                                <tspan x="50%" dy="0%">Adobe</tspan>
+                                <tspan x="50%" dy="12%">Photoshop</tspan>
+                            </text>
+                        </svg>
+                    </div>
+
 
                 </div>
                 <div class="col">
 
-                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
-                        <circle class="circle second-circle animated-circle rotate-variant-22" cx="50%" cy="50%" r="75" />
-                        <circle class="circle first-circle animated-circle rotate-variant-21" cx="50%" cy="50%" r="75" />
-                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                            <tspan x="50%" dy="0%">Adobe</tspan>
-                            <tspan x="50%" dy="12%">Indesign</tspan>
-                        </text>
-                    </svg>
+                    <div data-percent="60">
+                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
+                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                                <tspan x="50%" dy="0%">Adobe</tspan>
+                                <tspan x="50%" dy="12%">Photoshop</tspan>
+                            </text>
+                        </svg>
+                    </div>
+
 
                 </div>
                 <div class="col">
+                    <div data-percent="70">
+                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
+                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
+                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
+                                <tspan x="50%" dy="0%">Adobe</tspan>
+                                <tspan x="50%" dy="12%">Photoshop</tspan>
+                            </text>
+                        </svg>
+                    </div>
 
-                    <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                        <circle class="circle third-circle" cx="50%" cy="50%" r="75" />
-                        <circle class="circle second-circle animated-circle rotate-variant-32" cx="50%" cy="50%" r="75" />
-                        <circle class="circle first-circle animated-circle rotate-variant-31" cx="50%" cy="50%" r="75" />
-                        <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                            <tspan x="50%" dy="0%">Power</tspan>
-                            <tspan x="50%" dy="12%">Point</tspan>
-                        </text>
-                    </svg>
 
                 </div>
 
@@ -252,17 +264,14 @@
 
 
 
-
-
-
-
-
-
-
-
 </div>
 
 
 
+
+
+
+<script src="js/main.min.js">  </script>
 </body>
+
 </html>
