--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
     <div class="row " >
         <div class="col">
         <div class=" bg ">
-            <div style="padding-top:112px;padding-left: 90px; padding-right: 45px;"><h2 class=" Artic text-black">ABOUT ME_</h2>
-                <div class="Text collapsible-content">
+            <div style="padding-top:112px;padding-left: 90px; padding-right: 45px;"><h2 class=" Artic text-black" id="aboutMe-title">ABOUT ME_</h2>
+                <div class="Text collapsible-content" id="aboutMe-content">
                     Lorem ipsum dolor a consectetur adipiscing elitse eiusmod tempor incididunt labore dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus facilisis. Lorem ipsum dolor amet, consectetur adipiscing elitsed eiusmod temp incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
 
                 </div>
@@ -89,9 +89,10 @@
 
         <div class="row AAA" >
            <header class="col ">
-               <h1><span class="HeadFont1">JHON</span> <br> <span class="HeadFont2">ABIRAR</span></h1>
+               <h1><span class="HeadFont1" id="header-name1">JHON</span> <br>
+                   <span class="HeadFont2" id="header-name2">ABIRAR</span></h1>
                <hr class="yellow-line">
-               <span class="Header3">UI DESIGNER</span>
+               <span class="Header3" id="header-title">UI DESIGNER</span>
            </header>
         </div>
 
@@ -103,20 +104,20 @@
                <div class="row collapsible-content" style="padding-top:25px;">
                    <div class="col">
                        <span class="Data">PHONE</span>
-                       <div class="Data2">+000 123 456 789</div>
+                       <div class="Data2" id="contact-phone">+000 123 456 789</div>
 
 
                    </div>
                    <div class="col">
 
                        <span class="Data">EMAIL</span>
-                       <div class=" Data2">urname<wbr>@gmail.com</div>
+                       <div class=" Data2" id="contact-email">urname<wbr>@gmail.com</div>
 
                    </div>
                    <div class="col">
 
                        <span class="Data">AREA</span>
-                       <div class="Data2">Your Street Address Here</div>
+                       <div class="Data2" id="contact-area">Your Street Address Here</div>
 
                    </div>
                </div>
@@ -127,7 +128,7 @@
            <article class="col  ">
                <h2 class="Artic ">EDUCATION_</h2>
 
-               <div class="row collapsible-content" style="padding-top:34px;">
+               <div class="row collapsible-content" style="padding-top:34px;" id="education-section">
 
                    <div class="col Data text-dark-gray">
                        <span >ENTER YOUR MAJOR</span>
@@ -135,7 +136,6 @@
                            <div >Name Of Your University</div>
                            <div >2005–2009</div>
                        </div>
-
                    </div>
 
                    <div class="col Data text-dark-gray">
@@ -144,9 +144,9 @@
                           <span >Name Of Your University</span><br>
                            <span >2009–2011</span>
                        </div>
-
-
                    </div>
+
+
                </div>
            </article>
         </div>
@@ -154,7 +154,7 @@
         <article class="row" style="padding-top:126px;padding-left: 58px;">
             <h2 class="Artic ">EXPERIENCE_</h2>
 <div class="collapsible-content">
-            <div class="row Open-Sans text-light-gray">
+            <div class="row Open-Sans text-light-gray" id="experience-section">
                 <div >
                     <h4 class=" text-bottom">Enter Job Position Here</h4>
                  <div style="padding-top: 15px; padding-left:2px">
@@ -188,14 +188,14 @@
 
         <article class="row " style="padding-top:164px;padding-left: 58px;">
             <h2 class=" Artic ">EXPERTISE_</h2>
-            <div class="row  collapsible-content" >
+            <div class="row  collapsible-content"  id="skills-section" >
                 <div class="col">
 
-                    <div data-percent=50>
+                    <div data-percent="50">
                         <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
                             <circle class="circle_test third" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test sec" cx="50%" cy="50%" r="75" />
+                            <circle class="circle_test fir" cx="50%" cy="50%" r="75" />
                             <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
                                 <tspan x="50%" dy="0%">Adobe</tspan>
                                 <tspan x="50%" dy="12%">Photoshop</tspan>
@@ -204,54 +204,11 @@
                     </div>
 
 
-                </div>
-                <div class="col ">
-
-                    <div data-percent="80">
-                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
-                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                                <tspan x="50%" dy="0%">Adobe</tspan>
-                                <tspan x="50%" dy="12%">Photoshop</tspan>
-                            </text>
-                        </svg>
-                    </div>
 
 
                 </div>
-                <div class="col">
-
-                    <div data-percent="60">
-                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
-                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                                <tspan x="50%" dy="0%">Adobe</tspan>
-                                <tspan x="50%" dy="12%">Photoshop</tspan>
-                            </text>
-                        </svg>
-                    </div>
 
 
-                </div>
-                <div class="col">
-                    <div data-percent="70">
-                        <svg width="175" height="175" xmlns="http://www.w3.org/2000/svg">
-                            <circle class="circle_test third" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test sec animated-circle" cx="50%" cy="50%" r="75" />
-                            <circle class="circle_test fir animated-circle" cx="50%" cy="50%" r="75" />
-                            <text x="50%" y="45%" text-anchor="middle" class="CCCircle">
-                                <tspan x="50%" dy="0%">Adobe</tspan>
-                                <tspan x="50%" dy="12%">Photoshop</tspan>
-                            </text>
-                        </svg>
-                    </div>
-
-
-                </div>
 
 
             </div>
